Fixed styling for overflowing grids on sheets, closes #268.

--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -637,6 +637,19 @@ label.checkbox, label.radio {
   border-left: 2px solid $table-border-color;
 }
 
+.blind-background,
+.shade-background {
+  display: table;
+}
+
+.blind-background {
+  background-color: $body-bg;
+}
+
+.shade-background {
+  background-color: $table-bg-accent;
+}
+
 .design-edit-box {
   background-color: $table-bg-accent;
   border-left: 2px solid $table-border-color;
